syntax = "proto3";

package simpleGuide;

option go_package = "grpc/proto";

//Here is the message that the client send to the server
message Message{
  int64 type=1;
  string content=2;
  bytes vector_clock=3;
  int64 client_id=4;
}

service Broadcast {
  rpc SendBroadcast(stream Message) returns (stream Message);
}